monitoring/grafana-dashboards.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: grafana
        volumeMounts:
        - mountPath: /grafana-dashboard-definitions/0/argocd
          name: grafana-dashboard-argocd
          readOnly: true
        - mountPath: /grafana-dashboard-definitions/0/cilium
          name: grafana-dashboard-cilium
          readOnly: true
        - mountPath: /grafana-dashboard-definitions/0/ingress-nginx
          name: grafana-dashboard-ingress-nginx
          readOnly: true
        - mountPath: /grafana-dashboard-definitions/0/userdb
          name: grafana-dashboard-userdb
          readOnly: true
        - mountPath: /grafana-dashboard-definitions/0/shell-nodes
          name: grafana-dashboard-shell-nodes
          readOnly: true
      volumes:
      - name: grafana-dashboard-argocd
        configMap:
          name: grafana-dashboard-argocd
      - name: grafana-dashboard-cilium
        configMap:
          name: grafana-dashboard-cilium
      - name: grafana-dashboard-ingress-nginx
        configMap:
          name: grafana-dashboard-ingress-nginx
      - name: grafana-dashboard-userdb
        configMap:
          name: grafana-dashboard-userdb
      - name: grafana-dashboard-shell-nodes
        configMap:
          name: grafana-dashboard-shell-nodes
