monitoring/grafana-sidecar.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  template:
    spec:
      containers:
      - name: grafana-sc-dashboard
        image: kiwigrid/k8s-sidecar:0.1.178
        volumeMounts:
          - name: sc-dashboard-volume
            mountPath: /tmp/dashboards
      - name: grafana
        volumeMounts:
          - name: sc-dashboard-volume
            mountPath: /tmp/dashboards
      volumes:
        - name: sc-dashboard-volume
          emptyDir: {}
