monitoring/cilium-service-monitor.yaml
# Digital Ocean preinstall cilium on Kubernetes clusters
# Normally this would be with the cilium deployment; but we don't have one
apiVersion: v1
kind: Service
metadata:
  name: cilium
  namespace: kube-system
  labels:
    app: cilium
spec:
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
  selector:
    k8s-app: cilium
